# simple-text-chart

./: .gitignore  pyproject.toml
simple_text_chart/: __init__.py
tests/: test_generate_horizontal_bar.py
